Fix Issue #1
thanks @bradfordknowlton; featured images after first covering end of
prior post

--- a/style.css
+++ b/style.css
@@ -647,7 +647,7 @@ textarea[id=comment] { width: 100%; }
 	.sticky {
 		padding: 2em;
 		margin: -2em -2em 0;
-	}	
+	}
 	
 	.header .site-title {
 		font-size: 3em;
@@ -667,9 +667,9 @@ textarea[id=comment] { width: 100%; }
 		width: 66.666666%;
 		float: right;
 	}
-	.home .featured-image, .page .featured-image {
+	.home .featured-image:first, .page .featured-image {
 		margin: -2em -2em 0;
-	}	
+	}
 	.page-template-page-sidebar-right-php .content {
 		float: left;
 	}
